# opener

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  RELEASE.md  appveyor.yml  release.toml  rustfmt.toml
.github/workflows/: main.yml  release.yml
opener/: Cargo.toml  Drakefile.ts  LICENSE-THIRD-PARTY  release.toml
opener-bin/: Cargo.toml
opener-bin/src/: main.rs
opener/src/: freedesktop.rs  lib.rs  linux_and_more.rs  macos.rs  windows.rs  windows_and_wsl.rs  xdg-open
opener/src/windows/: reveal.rs
opener/tests/: missing_file.rs  version-numbers.rs
