[package]
name = "opener"
version = "0.6.1"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"
description = "Open a file or link using the system default program."
repository = "https://github.com/Seeker14491/opener"
readme = "../README.md"
keywords = ["open", "default", "launcher", "browser"]
categories = ["os"]
license = "MIT OR Apache-2.0"

[badges]
appveyor = { repository = "Seeker14491/opener", branch = "master", service = "github" }
travis-ci = { repository = "Seeker14491/opener", branch = "master" }
maintenance = { status = "passively-maintained" }

[features]
reveal = [
    "dep:url",
    "dep:dbus",
    "winapi/shtypes",
    "winapi/objbase",
]

[dev-dependencies]
version-sync = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
bstr = "1"
dbus = { version = "0.9", optional = true, features = ["vendored"] }
url = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
normpath = "1"
winapi = { version = "0.3", features = ["shellapi"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
