[package]
name = "opener"
version = "0.7.2"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2021"
description = "Open a file or link using the system default program."
repository = "https://github.com/Seeker14491/opener"
readme = "../README.md"
keywords = ["open", "default", "launcher", "browser"]
categories = ["os"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["dbus-vendored"]
reveal = ["dep:url", "dep:dbus", "windows-sys/Win32_System_Com"]
dbus-vendored = ["dbus?/vendored"]

[target.'cfg(target_os = "linux")'.dependencies]
bstr = "1"
dbus = { version = "0.9", optional = true }
url = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
normpath = "1"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
